--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
 	// For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
 	"version": "0.2.0",
 	"configurations": [
+
 		{
 			"type": "node",
 			"request": "launch",
@@ -15,6 +16,7 @@
 				"--timeout",
 				"999999",
 				"--colors",
+				"--recursive",
 				"${workspaceFolder}/test"
 			],
 			"internalConsoleOptions": "openOnSessionStart"
